--- a/buttons.html
+++ b/buttons.html
@@ -3,15 +3,20 @@
         background-color: rgb(200, 9, 9);
         color:white;
         border:none;
-        height:36px;
-        width:105px;
         border-radius: 2px;
-        curser:pointer;
+        cursor:pointer;
         margin-right:8px;
+        margin-left:20px;
+        padding-top: 10px;
+        padding-left: 16px;
+        padding-bottom:10px;
+        padding-right: 16px;
+        transition: opacity 0.15s;
+        vertical-align: top;
     }
 
     .subscribe-button:hover {
-        opacity: 0.7;
+        opacity: 0.8;
     }
 
     .subscribe-button:active {
@@ -21,21 +26,29 @@
     .jion-button {
         background-color:white;
         border-color:rgb(39, 39, 215)
-        border-style: solid;
-        border-width:1px;
-        color:rgb(39, 39, 215);
-        height:36px;
-        width:60px;
-        border-radius:2px;
-        courser:pointer;
+        border-style:solid;
+        border-width: 1px;
+        color:rgb(39,39, 215);
+        border-radius: 2px;
+        cursor:pointer;
+        padding-top: 9px;
+        padding-left: 16px;
+        padding-bottom: 9px;
+        padding-right: 16px;
+        
+     transition: background-color 0.15s;
+        color 0.15s;
 
     }
-
     .jion-button:hover {
         background-color:rgb(39, 39, 215);
      color:white;
     }
 
+
+.jion-button:active{
+    opacity: 0.7;
+}
     .Tweet-button{
         background-color:rgb(39, 39, 215);
         color:white;
@@ -47,8 +60,15 @@
     font-size:15px;
     cursor:pointer;
     margin-left:8px;
+    transition:box-shadow 0.15s;
+    vertical-align: top;
+
     }
 
+
+    .Tweet-button:hover {
+        box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
+    }
 
 </style>
 
@@ -57,7 +77,7 @@
 </button>
 
 <button class="jion-button">
-    JION
+    JION 
 </button>
 
 <button class="Tweet-button">
