--- a/text.html
+++ b/text.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-.video-title{
-    font-family: Arial;
-font-size: 18px;
-font-weight: bold;
-font-style: italic;
-width: 300px;
-line-height: 24px;
-margin-bottom: 5px;
-}
+    <head>
+        <title>text practice</title>
+<link rel="stylesheet" href="text.css">
 
-.video-status {
-font-family: Arial;
-font-size: 14px;
-color: rgb(96, 96, 96);
-margin-top: 0px;
-}
-</style>
 
+    </head>
+   
+    <body>
+        
 <p class="video-title">
     Talking tech and AI with google ceo sundar piche
 </p>
 
-<p class="video-status">
+<p class="video-stats">
     3.4M views 	&#183; 6 months ago
 </p>
 
 
-<p>
+<p class="video-author">
     Marques Brownlee &#10003;
 </p>
-</body>
+
+
+<p class="video-description">
+    Talking tech and AI on the heels of Google 
+    I/O. Also a daily driver phone reveal from Google's CEO. 
+    Shoutout to Sundar!
+</p>
+
+
+<p class="apple-text">
+    Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &gt;</span>
+</p>
+    </body>
 </html>
